--- a/src/modules/README
+++ b/src/modules/README
@@ -3,20 +3,25 @@ Mustikkabot uses a modular system, where you can just put new modules in a folde
 There are a few guidelines a module must follow:
 
 - The (main) file for the module must end in .py
-- The .py file must contain a method getId() which returns an unique string
-- The .py file must contain a class with the same name as the string returned by getId()
-- The class must contain a method called init(self, bot)
+- The .py file must contain a class with the same name as file without extension
+
+Optional:
+- The class may contain a method called init(self, bot), that will be called when the module is loaded
+- The class may contain a method called dispose(self), that will be called when the module is being unloaded
 
 An Example (example.py):
 
-def getId():
-    return "example"
-
 class example:
-    
-    def init():
-        pass # Do whatever we want
+
+    bot = None
+    file = None
+
+    def init(self, bot):
+        self.bot = bot
+        self.file = open("file", "r")
+
+    def dispose(self):
+        self.file.close()
+
 
 (End of example)
-
-The module-loader calls the init() method upon loading. In it is possible to register event callbacks and other actions (setup threads, call other python modules, ...). 
